--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "type": "git",
     "url": "https://github.com/react-native-community/react-native-text-input-mask"
   },
+  "dependencies": {
+     "react-native-elements": "1.0.0-beta5"
+  },
   "keywords": [
     "react",
     "native",
